<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoPlus</string>
    <string name="action_settings">Settings</string>
    <string name="take">Take \n Photo</string>
    <string name="collage">Collage</string>
    <string name="upload">Upload \n Photo</string>
    <string name="title">PhotoPlus</string>
    <string name="edit_picture">Edit Photo</string>
    <string name="title_activity_collage">Collage</string>
    <string name="num_photo">Number of Photos</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_two">Two Image Templates</string>
    <string name="title_activity_three">Three Image Templates</string>
    <string name="title_activity_four">Four Image Templates</string>
    <string name="template">Select Template</string>
    <string name="title_activity_template">Template</string>
    <string name="template_one">Template One</string>
    <string name="template_two">Template Two</string>
    <string name="custView">100</string>
    <string name="load">Upload</string>
    <string name="save">Save</string>


</resources>
