<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cmu.weikunl.photoplus.MakeCollage" >

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/three"
        android:layout_alignBottom="@+id/three"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_num"
        android:text="@string/two"
        android:textSize="20sp" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/four"
        android:layout_alignBottom="@+id/four"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_num"
        android:text="@string/three"
        android:textSize="20sp" />

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/numphoto"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_num"
        android:text="@string/four"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/numphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/num_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>